--- a/src/components/Processes/Processes.module.css
+++ b/src/components/Processes/Processes.module.css
@@ -1,39 +1,112 @@
 .processes {
-    width: 100vw;
+  width: 100vw;
   padding: 30px 0;
 }
-.processes_container {
-    /* display: flex;
-    flex-direction: column;
-    gap: 48px; */
-}
+
 .title {
   text-align: center;
   margin-bottom: 48px;
 }
+
+.processes_container {}
+
 .wrapIcons {
-    display: flex;
-    justify-content: space-between;
-       flex-direction: row;
-       margin-bottom: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 24px 0;
+  margin-bottom: 16px;
 }
+
+.itemGroup {
+  display: flex;
+  align-items: center;
+  /* gap: 16px; */
+  flex: 1 1 calc(33.333% - 32px);
+  max-width: calc(33.333% - 32px);
+  box-sizing: border-box;
+}
+
 .item {
-    display: flex;
-    justify-content: center;
-    align-items: center;   
-    flex-direction: column;
-    gap: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  width: 100px;
 }
+
 .icon {
+  height: 48px;
 }
+
 .text {
   font-weight: 400;
-  font-size: 36px;
+  font-size: 20px;
+  text-align: center;
 }
+
+.arrowWrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 12px;
+  box-sizing: content-box;
+}
+
+.arrow {
+  width: 20px;
+  height: auto;
+  font-size: 32px;
+  color: var(--black);
+  flex-shrink: 0;
+}
+
 .separator {
   width: 100%;
   height: 2px;
-  background-color: #20c2c4;
+  background-color: var(--accent);
   border: none;
-  /* margin-top: 48px; */
+}
+ .hideOnTablet {
+    display: none;
+  }
+
+/* ==== TABLET ==== */
+@media screen and (min-width: 744px) {
+  .wrapIcons {
+    gap: 32px 0;
+  }
+
+  .text {
+    font-size: 28px;
+  }
+
+  .arrow {
+    width: 68px;
+  }
+
+  .hideOnTablet {
+    display: none;
+  }
+}
+
+/* ==== DESKTOP ==== */
+@media screen and (min-width: 1440px) {
+  .wrapIcons {
+    flex-wrap: nowrap;
+    gap: 48px;
+  }
+
+  .itemGroup {
+    flex: 1 1 auto;
+    max-width: none;
+  }
+
+  .text {
+    font-size: 36px;
+  }
+
+  .hideOnTablet {
+    display: flex; /* Показує стрілку знову */
+  }
 }
