fix styles for footer

--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -169,7 +169,7 @@
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: #f9f9f9;
+  background-color: var(--white);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -223,7 +223,7 @@
 }
 .arrow:hover {
   background: var(--accent);
-  color: #fff;
+  color: var(--white);
 }
 .arrow:active {
   scale: 0.9;
