--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,38 +1,68 @@
-.footer{
-     background-color: var(--black);
-     padding: 68px 0 40px;
+.footer {
+  background-color: var(--black);
+  padding: 16px;
 }
 .footer_container {
-    display: flex;
-    flex-direction: row;
-    gap: 24px;
+  display: flex;
+  flex-direction: column;
+}
+.footerTop {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.logoWrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 60px;
 }
 .logoImg {
-  height: 40px;
+  height: 60px;
 }
-.text{
-    color: var(--white);
+.text {
+  display: none;
 }
-.nav
-{
+.nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 32px;
+  margin-bottom: 40px;
+  position: relative;
+}
+.navColumn {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  padding: 0 16px;
+  position: relative;
+}
+.navColumn::before {
+  content: "";
+  position: absolute;
+  top: -16px;
+  bottom: -16px;
+  left: 0;
+  width: 2px;
+  background-color: var(--white)
 }
 .nav a {
-  color: var(--additional-text);
-  
+  color: var(--white);
   text-decoration: none;
+  font-weight: 400;
+  font-size: 18px;
   transition: all 0.3s ease;
+  position: relative;
 }
 .nav a:hover {
   text-decoration: underline;
   color: var(--accent);
 }
-.socials{
-    display: flex;
-    justify-content: center;
-    gap: 51px;
+.socials {
+  display: flex;
+  justify-content: center;
+  gap: 80px;
+  margin-bottom: 40px;
 }
 .icon {
   width: 48px;
@@ -42,4 +72,106 @@
 }
 .icon:hover {
   color: var(--accent);
+}
+.copyright {
+  text-align: center;
+  color: var(--white);
+  font-weight: 400;
+  font-size: 16px;
+}
+
+@media screen and (max-width: 743px) {
+  .nav {
+    padding: 0 8px;
+    justify-content: space-between;
+  }
+}
+
+/* ==== TABLET (768px+) ==== */
+@media screen and (min-width: 744px) {
+  .footer {
+    padding: 30px;
+  }
+  .logoWrapper {
+    /* justify-content: center; */
+    margin-bottom: 20px;
+  }
+  .text {
+    display: block;
+    font-weight: 400;
+    font-size: 24px;
+    text-align: center;
+    color: var(--white);
+    margin-bottom: 40px;
+  }
+  .nav {
+    justify-content: center;
+  }
+  .navColumn {
+    padding-left: 114px;
+    padding-right: 90px;
+  }
+  .navColumn::before {
+    left: 66px;
+    width: 4px;
+  }
+  .navColumn a {
+    font-size: 30px;
+  }
+  .copyright {
+  font-size: 20px;
+}
+}
+
+/* ==== DESKTOP (1440px+) ==== */
+@media screen and (min-width: 1440px) {
+   .footer {
+    padding-top: 48px;
+    padding-bottom: 12px;
+  }
+  .footerWrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .footerTop {
+    align-items: flex-start;
+  }
+  .logoWrapper {
+    justify-content: flex-start;
+    margin-top: 40px;
+  }
+  .logoImg {
+    height: 68px;
+  }
+  .text {
+    margin-bottom: 0;
+    margin-top: 2px;
+  }
+  .nav {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    padding-left: 24px;
+  }
+  .nav::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 4px;
+    background-color: var(--white)
+  }
+  .navColumn {
+    padding-left: 24px;
+    gap: 16px;
+  }
+  .navColumn::before {
+    display: none;
+  }
+  .socials {
+    align-items: flex-end;
+    gap: 50px;
+  }
 }
