--- a/src/components/Processes/Processes.module.css
+++ b/src/components/Processes/Processes.module.css
@@ -3,110 +3,75 @@
   padding: 30px 0;
 }
 
+.processes_container {}
+
 .title {
   text-align: center;
   margin-bottom: 48px;
 }
 
-.processes_container {}
-
 .wrapIcons {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 24px 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 24px;
+  justify-items: center;
   margin-bottom: 16px;
 }
 
-.itemGroup {
-  display: flex;
-  align-items: center;
-  /* gap: 16px; */
-  flex: 1 1 calc(33.333% - 32px);
-  max-width: calc(33.333% - 32px);
-  box-sizing: border-box;
-}
-
+/* ICON ITEM */
 .item {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 16px;
-  width: 100px;
-}
-
-.icon {
-  height: 48px;
-}
-
-.text {
-  font-weight: 400;
-  font-size: 20px;
   text-align: center;
 }
 
-.arrowWrap {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 12px;
-  box-sizing: content-box;
+/* ICON */
+.icon {
+  width: 48px;
+  height: 48px;
+  transition: width 0.3s, height 0.3s;
 }
 
-.arrow {
-  width: 20px;
-  height: auto;
-  font-size: 32px;
-  color: var(--black);
-  flex-shrink: 0;
+/* TEXT */
+.text {
+  font-weight: 400;
+  font-size: 20px;
 }
 
+/* SEPARATOR */
 .separator {
   width: 100%;
   height: 2px;
   background-color: var(--accent);
   border: none;
 }
- .hideOnTablet {
-    display: none;
-  }
 
 /* ==== TABLET ==== */
 @media screen and (min-width: 744px) {
   .wrapIcons {
-    gap: 32px 0;
+    gap: 32px;
+  }
+
+  .icon {
+    width: 70px;
+    height: 70px;
   }
 
   .text {
-    font-size: 28px;
-  }
-
-  .arrow {
-    width: 68px;
-  }
-
-  .hideOnTablet {
-    display: none;
+    font-size: 24px;
   }
 }
 
 /* ==== DESKTOP ==== */
 @media screen and (min-width: 1440px) {
   .wrapIcons {
-    flex-wrap: nowrap;
+    grid-template-columns: repeat(6, 1fr);
     gap: 48px;
   }
 
-  .itemGroup {
-    flex: 1 1 auto;
-    max-width: none;
-  }
-
   .text {
-    font-size: 36px;
-  }
-
-  .hideOnTablet {
-    display: flex; /* Показує стрілку знову */
+    font-size: 28px;
   }
 }
