--- a/src/components/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/src/components/LanguageSwitcher/LanguageSwitcher.module.css
@@ -21,6 +21,9 @@
   border-color: var(--accent);
   color: var(--accent);
 }
+.switcher:active{
+  scale: 0.95;
+}
 .black {
   background: transparent;
   border-color: var(--black);
