--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -265,7 +265,7 @@
 
 .swipeFinger {
   font-size: 42px;
-  animation: swipeAnimation 2s ease-in-out infinite;
+  animation: swipeAnimation 3s ease-in-out 1;
   opacity: 0.8;
 }
 
