fix background-image for Advantages

--- a/src/components/Advantages/Advantages.module.css
+++ b/src/components/Advantages/Advantages.module.css
@@ -13,16 +13,34 @@
   font-size: 20px;
   text-align: center;
 }
+
 .list {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 16px;
+  border-radius: 12px;
+  z-index: 1;
+}
+.list::before {
+  content: '';
+  position: absolute;
+  inset: 0;
   background-image: url("../../../public/owlGrey.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  opacity: 0.3; /* налаштування блідості фону */
+  z-index: 0;
   border-radius: 12px;
+  pointer-events: none;
+}
+
+.item,
+.title {
+  position: relative;
+  z-index: 2;
 }
 .item {
   display: flex;
