--- a/src/components/MobileMenu/MobileMenu.module.css
+++ b/src/components/MobileMenu/MobileMenu.module.css
@@ -3,19 +3,20 @@
   inset: 0;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(4px);
-  z-index: 50;
+  z-index: 999;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  /* padding-top: 16px; */
   animation: backdropFadeIn 0.5s ease forwards;
 }
+
 .menu {
   position: relative;
   background-color: var(--black);
   width: 100%;
   max-width: 378px;
-  min-height: 680px;
+  max-height: 100dvh;
+  overflow-y: auto;
   padding: 20px;
   border: 1px solid var(--accent);
   display: flex;
@@ -25,7 +26,7 @@
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);
   opacity: 0;
   will-change: transform, opacity;
-  z-index: 1;
+  z-index: 1000;
 }
 .menu.closing {
   animation: menuExit 0.45s ease forwards;
@@ -38,7 +39,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  opacity: 0.08; /* налаштування блідісті фону */
+  opacity: 0.08;
   z-index: 0;
   pointer-events: none;
   border-radius: inherit;
@@ -87,7 +88,6 @@
 .consultationBtn {
   display: flex;
   align-items: center;
-  text-align: center;
   justify-content: center;
   color: var(--white);
   width: 100%;
@@ -104,7 +104,7 @@
   border: 2px solid var(--white);
 }
 .consultationBtn:active {
- scale: 0.95;
+  scale: 0.95;
 }
 .logo {
   width: 100%;
@@ -116,7 +116,6 @@
 }
 
 /* === Animations === */
-
 @keyframes backdropFadeIn {
   from {
     background-color: rgba(0, 0, 0, 0);
@@ -154,11 +153,8 @@
   }
 }
 
-/* ==== TABLET (768px+) ==== */
+/* === Tablet (744px+) === */
 @media screen and (min-width: 744px) {
-  /* .backdrop {
-  padding-top: 0;
-} */
   .menu {
     max-width: 744px;
     min-height: 820px;
