--- a/src/components/MobileMenu/MobileMenu.module.css
+++ b/src/components/MobileMenu/MobileMenu.module.css
@@ -1,6 +1,11 @@
 .backdrop {
   position: fixed;
-  inset: 0;
+  /* inset: 0; */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(4px);
   z-index: 999;
@@ -8,6 +13,7 @@
   justify-content: center;
   align-items: flex-start;
   animation: backdropFadeIn 0.5s ease forwards;
+  overflow-y: auto;
 }
 
 .menu {
