--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   --accent: #189ea3;
-  --accent-activ: #0f959a;
+  --accent-active: #0f959a;
   --white: #ffffff;
   --black: #0d151d;
   --background: #f6f9f9;
